1.3.0 (beta)

 - Added support for embedding PFG forms into other templates.  See
   README_EMBEDDING.txt for details. (David Glick)

 - Clean out 2.1 compatibility code. Ahhhh! (Steve McMahon)

 - Pulling out removeSkinLayer for arg PloneFormGenPlone3, since
   this appears to have not existed and certainly is unnecessary
   currently (Andrew Burkhalter)
 
 - Removed unneeded and unused legacy typesonly profile directory 
   (Andrew Burkhalter)

 - Installation process is entirely based upon GenericSetup extension
   profiles to the level that is pragmatic for support of Plone 2.5.x
   up to version Plone 3.x. In brief, this means that we have an install
   method so that we appear installable with the portal_quickinstaller 
   tool in Plone 2.5.x and that we run relevant profiles in portal_setup
   upon install (Jesse Snyder, Andrew Burkhalter)

1.2.5

 - Integrate Portugese translation from Nuno Cruz.

 - Form submission should not be disabled when the form is locked for
   editing.

 - Fixed bug where 3rd-party additions to the list of types allowed
   within a form folder were purged on PFG reinstall.
   This closes http://plone.org/products/ploneformgen/issues/210
   (David Glick)

 - Fixed bug where install failed if portal_factory still references
   any types that no longer exist in portal_types.
   (David Glick)

1.2.4

 - Added Rating-Scale Field based on Titus Anderson's LikertField.
   Thanks to Titus and the University of Louisville.

 - Add delete capabilities to Andreas' record editor. Added escaping
   for multi-line fields. Guarded editing with ModifyPortalContent
   rather than the download permission.

 - Save adapter: stored records can now be edited through the Plone UI
   via the data saver's tabular view.
   The edit UI is pretty basic and provides only a text field per
   stored value. No fancy widgets, no validation.
   (Andreas Jung)

1.2.3

 - Created egg framework, moved svn trunk to
   collective/Products.PloneFormGen/trunk.
