@@ -1,5 +1,9 @@
 1.3.0 (beta)
 
+ - Mailer now has an option to select among available fields those
+   which should be included in the e-mail. Interface is identical to 
+   thanks page. (Steve McMahon)
+
  - Added support for embedding PFG forms into other templates.  See
    README_EMBEDDING.txt for details. (David Glick)
 
